--- a/Samurai Story/notes/TODO/TODO.txt
+++ b/Samurai Story/notes/TODO/TODO.txt
@@ -1,13 +1,12 @@
 hoje:
-	floor 3 level design
-	floor 3 - (sauna) tileset
-	
 	break
 	
 	floor 4 level design
 	floor 4 - (relaxamento) tileset
 	
 	break
+	
+	transition between rooms
 	
 	floor 5 - boss
 	boss patterns
